# ai-agent-team

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_team/: __init__.py  cli.py
agent_team/agents/: __init__.py  architecture.py  base.py  base_execution_agent.py  code_quality.py  performance.py  security.py  testing.py
agent_team/agents/business_development/: __init__.py  lead.py
agent_team/agents/customer_success/: __init__.py  lead.py
agent_team/agents/data_analytics/: __init__.py  lead.py
agent_team/agents/design/: __init__.py  lead.py
agent_team/agents/engineering/: __init__.py  lead.py
agent_team/agents/leadership/: __init__.py  ciso.py  cto.py  orchestrator.py
agent_team/agents/marketing/: __init__.py  lead.py
agent_team/agents/operations/: __init__.py  lead.py
agent_team/agents/product/: __init__.py  lead.py
agent_team/core/: __init__.py  config.py  dispatcher.py  models.py  orchestrator.py
tests/: test_agents.py  test_config.py
